--- a/src/css/2-layout/main.css
+++ b/src/css/2-layout/main.css
@@ -1,9 +1,9 @@
 :root {
-  --max-inline-size : 95vw;
+  /* --max-inline-size : 95vw; */
   --flex-wrap:wrap;
   --horizontal-alignment:space-evenly;
   --column-gap:0;
-
+  --margin-block-start: var(--step-4);
 }
 
 figure {
